fix: too much padding reduce

--- a/styles/ceramic.css
+++ b/styles/ceramic.css
@@ -4,7 +4,7 @@
   background: url(../images/premium.png) no-repeat top;
   background-size: cover;
   background-attachment: fixed;
-  padding-top: 100px;
+  padding-top: 50px;
 }
 
 .premium-header {
